[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = ""
authors = ["Matheus Medeiros <mf.matheus00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"
factory-boy = "^3.3.0"
django = "^4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
